force-app/main/default/objects/EC_Mulesoft_Integration__c/EC_Mulesoft_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Mulesoft Integration</label>
</CustomObject>