force-app/main/default/objects/EC_Mulesoft_Integration__c/fields/EC_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>EC_Client_Secret__c</fullName>
    <description>US-76262:Raghav:This fields holds the client secret for API Callout.</description>
    <label>EC_Client_Secret</label>
    <length>90</length>
    <required>true</required>
    <type>Text</type>
</CustomField>