force-app/main/default/objects/EC_Mulesoft_Integration__c/fields/EC_ClientId__c.field-meta.xml
<CustomField>
    <fullName>EC_ClientId__c</fullName>
    <description>US:76262:Raghav:This field holds the client id for API Callout.</description>
    <label>EC_ClientId</label>
    <length>90</length>
    <required>true</required>
    <type>Text</type>
</CustomField>