force-app/main/default/objects/EC_Mulesoft_Integration__c/fields/EC_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>EC_Endpoint__c</fullName>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>